# sanremo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
src/sanremo/: __init__.py  internal.py
tests/: test_internal.py  test_sanremo.py
