[project]
name = "sanremo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alexis Daboville", email = "alexis.daboville@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
    "colorama>=0.4.6",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
"sanremo" = "sanremo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pre-commit>=3.7.1",
    "assertpy>=1.1",
    "ruff>=0.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sanremo"]
